--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 ﻿################################################################################
 # This .gitignore file was to ignore css commit.
 ################################################################################
-/.sass-cache
+css/.sass-cache
 
